used larger breakpoint to prevent charts from being too small

--- a/custom.css
+++ b/custom.css
@@ -50,13 +50,13 @@ main {
 	position: relative;
 }
 
-.col-md-4 {
+.col-lg-4 {
 	padding: 5px;
 	height: 28vw;
 }
 
-@media (max-width: 767px) {
-	.col-md-4 {
+@media (max-width: 991px) {
+	.col-lg-4 {
 		height: 65vw;
 	}
 }
